tests/errors/occurs_check.eff
#type let rec f x = f in f;;
